# o88-bot-dashboard

./: .env.example  .gitignore  README.md
dashboard/: DEPLOY.md  README.md  package.json  pnpm-lock.yaml  vercel.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/src/app/glossary/: page.tsx
dashboard/src/app/predict/: page.tsx  predict-list.tsx
dashboard/src/app/predict/[category]/: page.tsx
dashboard/src/components/: aurora.tsx  countdown.tsx  cursor.tsx  fade-in.tsx  number-ticker.tsx  pulse-dot.tsx  redeem-button.tsx  wallet-button.tsx
dashboard/src/lib/: category.ts  cn.ts  format.ts  labels.ts  sui-data.ts  svi.ts
operator/: Cargo.toml
operator/crates/data/: Cargo.toml
operator/crates/data/src/: keys.rs  lib.rs  managers.rs  predict.rs  predict_server.rs  scale.rs  sui_rpc.rs  types.rs
operator/crates/data/tests/: parse_oracle.rs
operator/crates/data/tests/fixtures/: oracle_svi_btc.json
operator/crates/discover/: Cargo.toml
operator/crates/discover/src/: main.rs
scripts/: README.md
scripts/margin/: decode-tx.sh  inspect-margin-manager.sh  recent-borrows.sh  recent-creations.sh  recent-liquidations.sh
scripts/predict/: inspect-manager.sh  inspect-oracle.sh  inspect-registry.sh  k-redeem-watch.sh  live-oracles.sh  manager-events.sh  oracle-catalog.sh  oracle-summary.sh
scripts/python/: inspect_oracle.py  scan_owned_objects.py  summarize_oracles.py
scripts/source/: clone-deepbookv3-main.sh  clone-predict-testnet.sh  list-deepbookv3-branches.sh
scripts/spot/: bluefin-pool-events.sh  cetus-pools-top.sh  cetus-pools.sh  deepbook-pools-summary.sh  deepbook-pools.sh  inspect-deepbook-pool.sh
scripts/sui-rpc/: _rpc.sh  dynamic-field.sh  dynamic-fields.sh  events.sh  get-object.sh  object-types.sh  owned-objects.sh  txns.sh
(+1 files in other folders)
