[workspace]
resolver = "2"
members = ["crates/discover", "crates/data"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
blake2 = "0.10"
bech32 = "0.11"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
ed25519-dalek = "2"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
