[package]
name = "o88-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "o88_data"
path = "src/lib.rs"

[[bin]]
name = "predict-catalog"
path = "src/bin/predict_catalog.rs"

[[bin]]
name = "inspect-oracle"
path = "src/bin/inspect_oracle.rs"

[[bin]]
name = "k-redeem-watch"
path = "src/bin/k_redeem_watch.rs"

[[bin]]
name = "positions-by-oracle"
path = "src/bin/positions_by_oracle.rs"

[[bin]]
name = "verify-keypair"
path = "src/bin/verify_keypair.rs"

[[bin]]
name = "k-redeem-bot"
path = "src/bin/k_redeem_bot.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake2.workspace = true
bech32.workspace = true
clap.workspace = true
dotenvy.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
